service: try mkdir_with_parents() on failed writes

If we fail to write the database file, try g_mkdir_with_parents() to
create the parent directory and try again.

https://bugzilla.gnome.org/show_bug.cgi?id=689136